--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AppSettings": {
+    "Secret": "a354a484-1604-4a96-b3c4-d63eaedf61005d0e98d4-b666-432d-b096-bba463607053",
+    "ClientId": "993666303698-3mipotctqkgv9t8h4q75rba5fn4vjpqv.apps.googleusercontent.com",
+    "ClientSecret": "HzYLwQCSGiGVCyVkGbOH3nou"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
