--- a/Api/Api/appsettings.Development.json
+++ b/Api/Api/appsettings.Development.json
@@ -5,5 +5,13 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "Certs/server_dev.pfx",
+        "Password": "pasek"
+      }
+    }
   }
 }
