--- a/Api/docker-compose.override.yml
+++ b/Api/docker-compose.override.yml
@@ -9,3 +9,5 @@ services:
     ports:
       - "50613:80"
       - "44371:443"
+    volumes:
+      - ../GoogleStorage_VS:/root/.local/share/google-filedatastore/
