--- a/Api/docker-compose.prod.yml
+++ b/Api/docker-compose.prod.yml
@@ -11,3 +11,4 @@ services:
       - "443:443"
     volumes:
       - ../Data:/app/Data
+      - ../GoogleStorage:/root/.local/share/google-filedatastore/
