--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -4,10 +4,10 @@
   },
   "AppSettings": {
     "Secret": "a354a484-1604-4a96-b3c4-d63eaedf61005d0e98d4-b666-432d-b096-bba463607053",
-    "ClientId": "993666303698-3mipotctqkgv9t8h4q75rba5fn4vjpqv.apps.googleusercontent.com",
-    "ClientSecret": "HzYLwQCSGiGVCyVkGbOH3nou",
+    "ClientId": "1043184567-plul3ds9456nvtvmtp4gqqcbgf3fq3hh.apps.googleusercontent.com",
+    "ClientSecret": "zblQT-lfNsPGIa6iLG1nn3N9",
     "StorageFile": "googleApiStorageFile",
-    "RedirectUri": "https://localhost:44329/signin-google"
+    "RedirectUri": "https://localhost/signin-google"
 
   },
   "Logging": {
