--- a/Api/Api/Api.csproj
+++ b/Api/Api/Api.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
