Python processing /no script tho

--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -3,11 +3,17 @@
     "DefaultConnection": "Data source = Data/sqlite.db"
   },
   "AppSettings": {
-    "Secret": "a354a484-1604-4a96-b3c4-d63eaedf61005d0e98d4-b666-432d-b096-bba463607053",
-    "ClientId": "1043184567-plul3ds9456nvtvmtp4gqqcbgf3fq3hh.apps.googleusercontent.com",
-    "ClientSecret": "zblQT-lfNsPGIa6iLG1nn3N9",
-    "StorageFile": "googleApiStorageFile",
-    "RedirectUri": "https://localhost/signin-google"
+    "Secrets": {
+      "Secret": "a354a484-1604-4a96-b3c4-d63eaedf61005d0e98d4-b666-432d-b096-bba463607053",
+      "ClientId": "1043184567-plul3ds9456nvtvmtp4gqqcbgf3fq3hh.apps.googleusercontent.com",
+      "ClientSecret": "zblQT-lfNsPGIa6iLG1nn3N9",
+      "RedirectUri": "https://localhost/signin-google"
+    },
+    "StoragePaths": {
+      "GoogleStorageDirectory": "googleApiStorageDirectory",
+      "ScriptFullPath": "scripts/python.py",
+      "UploadsDirectory": "/app/uploads"
+    }
 
   },
   "Logging": {
