--- a/Api/Api/Api.csproj
+++ b/Api/Api/Api.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Script\" />
+  </ItemGroup>
+
 </Project>
