--- a/Api/docker-compose.override.yml
+++ b/Api/docker-compose.override.yml
@@ -12,4 +12,5 @@ services:
     volumes:
       - ../sharedVS/GoogleStorage/:/root/.local/share/google-filedatastore/
       - ../sharedVS/uploads/:/app/uploads/
+      - ../sharedVS/scripts/:/app/scripts/
       - ../sharedVS/data/:/app/Data/
