--- a/Api/docker-compose.prod.yml
+++ b/Api/docker-compose.prod.yml
@@ -13,3 +13,4 @@ services:
       - ../shared/Data:/app/Data
       - ../shared/GoogleStorage:/root/.local/share/google-filedatastore/
       - ../shared/uploads:/app/uploads/
+      - ../shared/scripts:/app/scripts/
