Converting graph image to GraphML format

--- a/Api/Api/Dockerfile
+++ b/Api/Api/Dockerfile
@@ -2,6 +2,12 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
+RUN apt-get update
+RUN apt-get -y upgrade 
+RUN apt-get -y install python3
+RUN apt-get -y install python3-pip
+RUN apt-get install -y libsm6 libxext6 libxrender-dev
+RUN yes | pip3 install opencv-python
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
@@ -15,9 +21,8 @@ FROM build AS publish
 RUN dotnet publish "Api.csproj" -c Release -o /app/publish
 
 FROM base AS final
-RUN apt-get install python 
 WORKDIR /app
 COPY --from=publish /app/publish .
 COPY --from=build /src/Api/Certs Certs/ 
-COPY --from=build /src/Api/Scripts scripts/ 
+ADD Api/Script Script/
 ENTRYPOINT ["dotnet", "Api.dll"]
