--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -11,7 +11,7 @@
     },
     "StoragePaths": {
       "GoogleStorageDirectory": "googleApiStorageDirectory",
-      "ScriptFullPath": "scripts/python.py",
+      "ScriptFullPath": "Script/optical_graph_recognition/main.py",
       "UploadsDirectory": "/app/uploads"
     }
 
