--- a/Api/Api/Dockerfile
+++ b/Api/Api/Dockerfile
@@ -2,6 +2,12 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
+RUN apt-get update
+RUN apt-get -y upgrade 
+RUN apt-get -y install python3
+RUN apt-get -y install python3-pip
+RUN apt-get install -y libsm6 libxext6 libxrender-dev
+RUN yes | pip3 install opencv-python
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
@@ -18,4 +24,5 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 COPY --from=build /src/Api/Certs Certs/ 
+ADD Api/Script Script/
 ENTRYPOINT ["dotnet", "Api.dll"]
