--- a/Api/Api/Api.csproj
+++ b/Api/Api/Api.csproj
@@ -12,7 +12,9 @@
   <ItemGroup>
     <PackageReference Include="Google.Apis.Auth" Version="1.48.0" />
     <PackageReference Include="Google.Apis.Drive.v3" Version="1.48.0.1995" />
-    <PackageReference Include="MediaTypeMap" Version="2.1.0" />
+    <PackageReference Include="MediaTypeMap" Version="2.1.0">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.5" />
