--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -4,7 +4,7 @@
   },
   "AppSettings": {
     "Secrets": {
-      "Secret": "a354a484-1604-4a96-b3c4-d63eaedf61005d0e98d4-b666-432d-b096-bba463607053",
+      "AppSecret": "a354a484-1604-4a96-b3c4-d63eaedf61005d0e98d4-b666-432d-b096-bba463607053",
       "ClientId": "1043184567-plul3ds9456nvtvmtp4gqqcbgf3fq3hh.apps.googleusercontent.com",
       "ClientSecret": "zblQT-lfNsPGIa6iLG1nn3N9",
       "RedirectUri": "https://localhost/signin-google"
